Create and update schema labels in bulk
